# OpenGL

./: build.gradle  settings.gradle
annotation/src/main/java/com/miracle/router/annotation/: Router.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/opengl/: App.java  DBHelper.kt  FlutterFragmentActivity.kt  GLSurfaceViewActivity.kt  Jni.kt  MainActivity.kt  MyGLSurfaceView.kt  RECActivity.kt  RECService.kt  VideoGLSurfaceView.kt
app/src/main/java/com/example/opengl/dlna/: DLNAActivity.kt
app/src/main/java/com/example/opengl/webscket/: WebSocketService.kt
app/src/main/jni/: Test.cpp  audio-jni.cpp  audio.cpp  com_example_opengl_Jni.h  convert_frame.cpp  convert_frame.h  ffmpeg_api.cpp  ffmpeg_api.h  player.cpp  player.h  shader.cpp  util.cpp  video.cpp
app/src/main/jni/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_dlnaactivity.xml  activity_flutter_fragment.xml  activity_glsurfaceview.xml  activity_main.xml  activity_rec.xml
commonlib/: build.gradle
commonlib/src/main/: AndroidManifest.xml
commonlib/src/main/java/com/miracle/commonlib/mroute/: MRoute.java
commonlib/src/main/java/com/miracle/commonlib/mroute/core/: ChainedHandler.java  ChainedInterceptor.java  RootUriHandler.java  UriCallback.java  UriHandler.java  UriInterceptor.java  UriRequest.java  (+1 more)
doc/android/: LearkCanary.md  android 伴鱼面试 — 1.md  android_list.md  android知识重点.md  android面试.md  android项目-aar合并.md  京东面试.md  大纲.md  头条面试.md  搜狐&KIKA&贝壳面试.md  适配.md  项目NaviSDK.md  项目opensdk&NaviSDK跳转.md
doc/android/android IPC & 消息机制 & 线程/android IPC/: IPC机制.md  binder-mmap.md  深入理解Binder.md
doc/android/android IPC & 消息机制 & 线程/android消息机制/: android消息机制.md  handler中的同步异步以及内存屏障.md
doc/android/android IPC & 消息机制 & 线程/线程/: android中线程和线程池.md
doc/android/android UI/: Activity_lifecycle.md  ConstraintLayout.md  android布局.md  fragment-stack.md  fragment.md  四大组件跳转生命周期.md
doc/android/android 三方库源码/: Retrofit&Okhttp源码.md  glide源码.md
doc/android/android性能/: AndroidAPM性能分析.md  android性能优化.md
doc/android/android架构/: android MVVM.md  android mvp.md  android组件化.md  架构图.md
doc/android/android源码/: AMS 启动源码.md  Activity从建立到显示.md  Android-bindService源码.md  Android系统启动流程.md  JSBrige.md  RxJava源码.md  WindowManagerService.md
doc/android/android源码/Android图形绘制原理/: 图形绘制原理.md
doc/android/android源码/Bitmap加载和Cache/: Bitmap加载和cache.md  LruCache源码.md
doc/android/android源码/View绘制流程/: android View绘制源码分析.md  android view绘制流程.md
doc/android/android源码/android 动画/: android动画.md  属性动画源码&工作原理.md
doc/android/android源码/android事件分发/: android事件分发.md  事件分发-源码分析.md
doc/android/java基础/: CAS.md  Untitled.md  volatile.md  从ReentrantLock实现看AQS源码.md  算法.md
doc/android/java基础/JVM/: java内存区域.md  java类加载机制(一).md  java类加载机制(二).md  java类加载机制.md  java虚拟机-JVM(面试).md  全面理解java内存模型(JMM)以及volatile关键字.md  图解java垃圾回收.md
doc/android/java基础/java线程/: java中的锁机制(面试).md  java对象锁,类锁,方法锁.md  java线程.md  java线程中的yield和join方法的 区别.md  java线程池(面试).md  java线程池源码.md  多线程.md  多线程其他.md  深入理解java并发之Synchronized实现原理.md  线程特性&非重入&乐观悲观.md
doc/android/插件化&热修复&多dex/: android 插件化-占位式(插桩式).md  android插件化-hook式.md  android类加载.md
doc/android/网络/: 网络面试题.md  网路层结构.md
flutter_module/lib/: main.dart
gradle/wrapper/: gradle-wrapper.properties
libcda/: build.gradle  class.json
libcda/src/main/java/com/example/libcda/: Heap.java  MyClass.java
libcda/src/main/resources/: class  class.json  weiyou-sdk
processor/: build.gradle
processor/src/main/java/com/miracle/compiler/: RouterProcessor.java
(+1 files in other folders)
